--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.2",
     "phosphor-react": "^1.4.1",
